--- a/frontend/pyproject.toml
+++ b/frontend/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "email-validator>=2.2.0",
     "flask-paginate>=2024.4.12",
     "flask>=3.1.0",
+    "flask-cors>=5.0.1",
     "flask-jwt-extended>=4.7.1",
     "flask-login>=0.6.3",
     "flask-sqlalchemy>=3.1.1",
